# POS_API

./: README.md  pyproject.toml
pos/core/models/: campaigns.py  product.py  receipt.py  report.py  repositories.py  sales.py  shift.py
pos/core/services/: campaign_service.py  product_service.py  receipt_service.py  report_service.py  sales_service.py  shift_service.py
pos/infra/: database.py
pos/infra/sqlite_repositories/: campaign_sqlite_repository.py  product_sqlite_repository.py  receipt_sqlite_repository.py  report_sqlite_repository.py  sales_sqlite_repository.py  shift_sqlite_repository.py  sqlite.py
pos/runner/: __main__.py  pos.db  setup.py
pos/runner/routers/: campaign_router.py  infra.py  product_router.py  receipt_router.py  report_router.py  shift_router.py
tests/: pos.db
tests/api_tests/: conftest.py  pos.db  test_campaign_api.py  test_product_api.py  test_receipt_api.py  test_report_api.py  test_shift_api.py
tests/repositories_tests/: pos.db  test_campaign_repository.py  test_product_repository.py  test_receipt_repository.py  test_report_repository.py  test_sales_repository.py  test_shift_repository.py
tests/servises_tests/: test_campaign_service.py  test_product_service.py  test_receipt_service.py  test_report_service.py  test_sales_service.py  test_shift_service.py
