[project]
name = "finalProject"
version = "0.1.0"
description = ""
authors = [
    {name = "Luka Balanchivadze",email = "lbala21@freeuni.edu.ge"},
    {name = "Irakli Shelia", email = "ishel21@freeuni.edu.ge"},
    {name = "Luka Pkhaladze", email = "lpkha21@freeuni.edu.ge"}
]

[tool.poetry.dependencies]
python = "^3.12"
coverage = "^7.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
httpx = "*"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = true

[tool.ruff]
target-version = "py312"

lint.select = ["E", "F", "I"]
lint.ignore = []
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true